[gd_scene load_steps=7 format=3 uid="uid://biftlm4wl8bdq"]

[ext_resource type="Script" uid="uid://bt8ngqbub6gh7" path="res://escena/mensaje/mensaje.gd" id="1_20taq"]
[ext_resource type="Texture2D" uid="uid://306y1ctsathc" path="res://assets/fondo/paisaje.jpeg" id="1_pt3w0"]
[ext_resource type="Texture2D" uid="uid://drbhcg4aeveh6" path="res://assets/Buttons/Button10.png" id="2_e3kpn"]
[ext_resource type="Texture2D" uid="uid://dk6d0uvgbjl1y" path="res://assets/Buttons/Button3.png" id="3_0o3wd"]
[ext_resource type="Texture2D" uid="uid://b4vm1p7l5aqol" path="res://assets/Buttons/Button22png.png" id="4_e33wg"]
[ext_resource type="Texture2D" uid="uid://bee2avp6jc4a5" path="res://assets/Buttons/Button21.png" id="5_u8oi1"]

[node name="enviar" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_20taq")

[node name="enviar mensaje" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="PanelContainer" type="PanelContainer" parent="enviar mensaje"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 2.0
offset_right = -1.0
offset_bottom = 378.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.96)
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="enviar mensaje/PanelContainer"]
layout_mode = 2
texture = ExtResource("1_pt3w0")
flip_h = true

[node name="VBoxContainer" type="VBoxContainer" parent="enviar mensaje/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="enviar mensaje/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.29, 21.135)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="enviar mensaje/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.29, 21.135)
layout_mode = 2

[node name="Label" type="Label" parent="enviar mensaje/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "mensaje"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="enviar mensaje/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.38
text = "mensaje"
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.14

[node name="LineEdit" type="LineEdit" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.65
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="MarginContainer3" type="MarginContainer" parent="enviar mensaje/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.29, 21.135)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="enviar mensaje/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.38
text = "id_user"
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.13

[node name="LineEdit" type="LineEdit" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.65
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="HBoxContainer" type="HBoxContainer" parent="enviar mensaje/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="salir" type="TouchScreenButton" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer"]
position = Vector2(346, 29.0417)
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("2_e3kpn")
texture_pressed = ExtResource("3_0o3wd")

[node name="Label" type="Label" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer/salir"]
offset_left = 87.5
offset_top = 29.9999
offset_right = 125.5
offset_bottom = 52.9999
text = "salir"

[node name="enviar" type="TouchScreenButton" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer"]
position = Vector2(634, 25.9167)
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("4_e33wg")
texture_pressed = ExtResource("3_0o3wd")

[node name="Label" type="Label" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer/enviar"]
offset_left = 95.0
offset_top = 31.0408
offset_right = 144.0
offset_bottom = 54.0408
text = "enviar"

[node name="regresar" type="TouchScreenButton" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer"]
position = Vector2(502, 26.9583)
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("5_u8oi1")
texture_pressed = ExtResource("3_0o3wd")

[node name="Label2" type="Label" parent="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer/regresar"]
offset_left = 79.9998
offset_top = 27.4999
offset_right = 140.0
offset_bottom = 50.4999
text = "conectar"

[node name="CheckButton" type="CheckButton" parent="enviar mensaje"]
offset_left = 322.0
offset_top = 249.0
offset_right = 480.0
offset_bottom = 280.0
text = "enviar a todos"

[node name="Label" type="Label" parent="enviar mensaje/CheckButton"]
layout_mode = 0
offset_left = 205.0
offset_right = 245.0
offset_bottom = 23.0
text = "ip"

[node name="Panel" type="Panel" parent="enviar mensaje"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 748.0
offset_top = 8.0
offset_right = -4.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="sdcrol" type="ScrollContainer" parent="enviar mensaje/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 3

[node name="Label" type="Label" parent="enviar mensaje/Panel/sdcrol"]
layout_mode = 2
size_flags_horizontal = 3
clip_text = true

[connection signal="pressed" from="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer/salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer/enviar" to="." method="_on_enviar_pressed"]
[connection signal="pressed" from="enviar mensaje/PanelContainer/VBoxContainer/HBoxContainer/regresar" to="." method="_on_regresar_pressed"]
